# stardict

./: Cargo.toml  README.md
res/: rformat.conf
res/rhtm/: autohint.js  jquery-ui.css  jquery-ui.js
src/: dict.rs  dictionary.rs  idx.rs  ifo.rs  main.rs  reformat.rs  result.rs  syn.rs
