[package]
name = "stardict"
version = "0.2.9"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>", "TN <tomgrean@github.com>"]
description = "StarDict for home NAS dictionary web server."
homepage = "https://github.com/tomgrean/stardict"
license = "MIT"

[dependencies]
regex = "1"
aho-corasick = "*"
